[package]
name = "swap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-compression = { version = "0.4.6", features = [ "bzip2", "tokio" ] }
async-trait = "0.1.79"
atty = "0.2.14"
backoff = { version = "0.4.0", features = [ "tokio" ] }
base64 = "0.22.0"
bdk = "1.0.0-alpha.8"
big-bytes = "1.0.0"
bitcoin = { version = "0.31.1", features = [ "rand", "serde" ] }
bmrng = "0.5.2"
comfy-table = "7.1.0"
config = { version = "0.14.0", default-features = false, features = [ "toml" ] }
conquer-once = "0.4.0"
#curve25519-dalek = "4.1.2"
data-encoding = "2.5.0"
dialoguer = "0.11.0"
digest = "0.11.0-pre.8"
directories-next = "2.0.0"
ecdsa_fun = { git = "https://github.com/LLFourn/secp256kfun", default-features = false, features = [ "libsecp_compat", "serde", "adaptor" ] }
#ed25519-dalek = "2.1.1"
futures = { version = "0.3.30", default-features = false }
hex = "0.4.3"
itertools = "0.12.1"
libp2p = "0.53.2"
pem = "3.0.3"
proptest = "1.4.0"
qrcode = "0.14.0"
rand = "0.9.0-alpha.1"
rand_chacha = "0.9.0-alpha.1"
reqwest = { version = "0.12.2", features = [ "rustls-tls", "stream", "socks" ], default-features = false }
rust_decimal = { version = "1.35.0", features = [ "serde-float" ] }
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_cbor = "0.11.2"
serde_json = "1.0.115"
serde_with = { version = "3.7.0", features = [ "macros" ] }
sha2 = "0.11.0-pre.3"
sigma_fun = { git = "https://github.com/LLFourn/secp256kfun", default-features = false, features = [ "ed25519", "serde", "secp256k1", "alloc" ] }
sqlx = "0.7.4"
structopt = "0.3.26"
strum = { version = "0.26.2", features = [ "derive" ] }
thiserror = "1.0.58"
time = "0.3.34"
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "time", "macros", "sync", "process", "fs", "net" ] }
tokio-socks = "0.5.1"
tokio-tungstenite = "0.21.0"
tokio-util = { version = "0.7.10", features = [ "io", "codec" ] }
toml = "0.8.12"
torut = { version = "0.2.1", default-features = false, features = [ "v3", "control" ] }
tracing = { version = "0.1.40", features = [ "attributes" ] }
tracing-appender = "0.2.3"
tracing-futures = { version = "0.2.5", features = [ "std-future", "futures-03" ] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "fmt", "ansi", "env-filter", "time", "tracing-log", "json" ] }
url = { version = "2.5.0", features = [ "serde" ] }
uuid = { version = "1.8.0", features = [ "serde", "v4" ] }
void = "1.0.2"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core" }

[target.'cfg(not(windows))'.dependencies]
tokio-tar = "0.3"

[target.'cfg(windows)'.dependencies]
zip = "0.6.6"

[dev-dependencies]
bitcoin-harness = "0.2.2"
get-port = "4.0.0"
hyper = "1.2.0"
mockito = "1.4.0"
port_check = "0.2.0"
proptest = "1.4.0"
serde_cbor = "0.11.2"
serial_test = "3.0.0"
spectral = "0.6.0"
tempfile = "3.10.1"
testcontainers = "0.14.0"

[build-dependencies]
anyhow = "1.0.81"
vergen = "9.0.0-beta.2"
